# fastapi-base-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: abc8d83a76c4_first_migration.py
src/: main.py
src/auth/: dependencies.py  exceptions.py  router.py  schemas.py  service.py
src/auth/infrastructure/token_storage/: base.py  redis.py
src/auth/infrastructure/transports/: base.py  cookie.py  header.py
src/core/: config.py  lifespan.py  logging_setup.py  middleware.py  permissions.py
src/core/exceptions/: __init__.py  exceptions.py  registers.py
src/core/infrastructure/: aiohttp_client.py  redis_client.py
src/core/middleware/: __init__.py  middleware.py  registers.py
src/core/security/: dependencies.py  exceptions.py  jwt.py  permissions.py  security.py  types.py
src/database/: dependencies.py  engine.py  session.py  unit_of_work.py  utils.py
src/integration/base/: unit_of_work.py
src/integration/utils/: datetimes.py
src/user/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py  uow.py
tests/: conftest.py  utils.py
tests/fakes/: users.py
tests/functional/: conftest.py
tests/functional/auth/: functional_test_auth.py
tests/functional/users/: functional_test_users.py  utils.py
tests/integration/: conftest.py  integration_test_auth_users.py  utils.py
tests/unit/auth/: unit_test_auth_service.py
tests/unit/user/: unit_test_user_service.py
